
AM_CXXFLAGS = @ac_reversead_cxxflags@
AM_CPPFLAGS = -I$(top_builddir)

noinst_PROGRAMS = test_base_adouble

test_base_adouble_SOURCES = test_base_adouble.cpp

test_base_adouble_LDADD = $(top_builddir)/src/libreversead.la
 
noinst_PROGRAMS = test_base_function_replay

test_base_function_replay_SOURCES = test_base_function_replay.cpp

test_base_function_replay_LDADD = $(top_builddir)/src/libreversead.la
