pkginclude_HEADERS = base_active.hpp reversead.hpp\
                     reversead_base.hpp opcodes.hpp\
                     logger.hpp\
                     reversead_mpi.hpp\
                     reversead_config.h\
                     base_active_assign.ipp base_active_plus.ipp\
                     base_active_mult.ipp base_active_minus.ipp\
                     base_active_div.ipp base_active_sincos.ipp

SUBDIRS = algorithm trace tape

EXTRA_DIST = reversead_config.h.in
