AM_CXXFLAGS = @ac_reversead_cxxflags@ 
AM_CPPFLAGS = -I$(top_builddir)/ReverseAD/include

noinst_LTLIBRARIES = libcheckpointing.la

libcheckpointing_la_SOURCES = iterative_func_base.cpp\
                              iterative_func_cond.cpp\
                              iterative_func_fixed.cpp\
                              checkpoint_trace.cpp
