libactivetypeincludedir = $(pkgincludedir)/activetype

libactivetypeinclude_HEADERS = base_active.hpp\
                               base_active_assign.ipp\
                               base_active_plus.ipp\
                               base_active_minus.ipp\
                               base_active_mult.ipp\
                               base_active_div.ipp\
                               base_active_trigono.ipp\
                               base_active_powexp.ipp
