libalgorithmincludedir = $(pkgincludedir)/algorithm

libalgorithminclude_HEADERS = base_function_replay.hpp\
                              base_reverse_mode.hpp\
                              base_reverse_adjoint.hpp\
                              base_reverse_hessian.hpp\
                              base_mpi_reverse_adjoint.hpp\
                              base_mpi_reverse_hessian.hpp\
                              single_derivative.hpp\
                              algorithm_common.hpp\
                              abstract_serializable.hpp\
                              trivial_adjoint.hpp\
                              trivial_hessian.hpp\
                              generic_deriv.hpp\
                              reversead_multiset.hpp\
                              base_reverse_generic.hpp
