libalgorithmincludedir = $(pkgincludedir)/algorithm

libalgorithminclude_HEADERS = base_function_replay.hpp\
                              base_reverse_mode.hpp\
                              base_reverse_adjoint.hpp\
                              base_reverse_hessian.hpp\
                              base_reverse_third.hpp\
                              base_mpi_reverse_adjoint.hpp\
                              base_mpi_reverse_hessian.hpp\
                              base_mpi_reverse_third.hpp\
                              single_derivative.hpp\
                              algorithm_common.hpp\
                              abstract_serializable.hpp\
                              trivial_adjoint.hpp\
                              trivial_hessian.hpp\
                              trivial_third.hpp\
                              generic_deriv.hpp\
                              reversead_multiset.hpp\
                              base_reverse_generic.hpp\
                              derivative_tensor.hpp\
                              base_reverse_generator.hpp\
                              base_reverse_tensor.hpp\
                              symmetry_tensor.hpp\
                              tensor_deriv.hpp
