libalgorithmincludedir = $(pkgincludedir)/algorithm

libalgorithminclude_HEADERS = base_function_replay.hpp\
                              base_reverse_mode.hpp\
                              base_reverse_adjoint.hpp\
                              base_reverse_hessian.hpp\
                              base_reverse_third.hpp\
                              algorithm_common.hpp\
                              derivative_info.hpp\
                              trivial_deriv.hpp\
                              trivial_adjoint.hpp\
                              trivial_hessian.hpp\
                              trivial_third.hpp\
                              generic_deriv.hpp\
                              generic_multiset.hpp\
                              base_reverse_generic.hpp\
                              derivative_tensor.hpp\
                              base_reverse_tensor.hpp\
                              tensor_index.hpp\
                              tensor_derivative_info.hpp\
                              tensor_deriv.hpp\
                              tensor.ipp
