libcommonincludedir = $(pkgincludedir)/common

libcommoninclude_HEADERS = reversead_config.h\
                           opcodes.hpp\
                           reversead_type.hpp\
                           reversead_core.hpp\
                           runtime_env.hpp

EXTRA_DIST = reversead_config.h.in
